--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Math&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- header section start -->
+    <section class="header-section display-flex">
+        <div class="header-div header-first-div" style="text-align: justify;">
+            <h1><span class="text-heighlight">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
 
+                healthy and delicious food for you!</p>
+            <a class="anchor-button" href="" target="_blank">Order Food</a>
+        </div>
+        <div class="header-div">
+            <img src="images/Group 8425.png" alt="">
+        </div>
+    </section>
+    <!-- header section end -->
+
+    <!-- Mid section start -->
+    <section class="mid-section display-flex">
+        <div class="mid-div">
+            <img src="images/Person Image.png" alt="">
+        </div>
+        <div class="mid-div mid-div-text">
+            <h1>About Me</h1>
+            <p>I love to cook, but I haven’t always. In fact, for most of my early adult life, cooking dinner usually
+                meant microwaving a frozen dinner or adding boiling water to something that came from a box. It wasn’t
+                until I got married that I started eating real food because I married a guy who cooks. I started joining
+                him in the kitchen and realized that cooking could be fun. Eating real food was really fun. And gaining
+                confidence as a home chef? That was life changing!</p><br><br><br>
+            <a class="anchor-button" href="" target="_blank">Contact Me</a>
+        </div>
+    </section>
+    <!-- Mid section end -->
 </body>
 
 </html>
