--- a/index.html
+++ b/index.html
@@ -46,6 +46,76 @@
         </div>
     </section>
     <!-- Mid section end -->
+
+    <!-- Mid text section start -->
+    <section class="mid-text-section">
+        <div class="mid-text-div">
+            <h1>My Recipies</h1>
+            <p>MyRecipes.com features the largest collection of professionally-tested recipes online from food experts.
+                <br> at the magazines and cookbooks you love and trust--including Cooking Light, Southern Living,
+            </p>
+        </div>
+    </section>
+    <!-- Mid text section end -->
+
+    <!-- Mid image section start -->
+    <section class="mid-image-section display-flex">
+        <div class="mid-image-div">
+            <img src="images/Project Cover.jpg" alt="">
+            <h1>Recipie Title</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="mid-image-div">
+            <img src="images/Project Cover.png" alt="">
+            <h1>Recipie Title</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+        <div class="mid-image-div">
+            <img src="images/Project Cover1.jpg" alt="">
+            <h1>Recipie Title</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
+                consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi
+                lectus at.</p>
+        </div>
+    </section>
+    <!-- Mid image section end -->
+
+    <!-- social trafic section start -->
+    <section class="social-trafic-section display-flex">
+        <div class="social-trafic-div">
+            <img src="images/youtube.png" alt="">
+            <h1>700K
+            </h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="social-trafic-div">
+            <img src="images/instagram.png" alt="">
+            <h1>2.4m
+            </h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="social-trafic-div">
+            <img src="images/linkedin.png" alt="">
+            <h1>200K
+            </h1>
+            <p>LinkedIn Followers</p>
+        </div>
+    </section>
+    <!-- social trafic section end -->
+
+    <!-- footer section start -->
+    <footer class="footer-section">
+        <h1><span class="text-heighlight">FOOD</span> NETWORK</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
