--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
+
+    <section class="display-flex button-div">
+        <div class="btton-design display-flex">
+            <img src="images/Healthy_Diet-removebg-preview.png" alt="">
+            <h1 style="font-size: 30px; font-weight: 700; color: rgb(94, 4, 4);">Healthy Diet</h1>
+            <button>Home</button>
+            <button>About</button>
+            <button>Contact Us</button>
+            <button>Our Blog</button>
+        </div>
+        <div class="search-button">
+            <input type="text" alt="search" style="padding: 7px 15px;">
+            <label for="" style="font-weight: 700; color:  rgb(94, 4, 4);;">
+                Search Your Result
+            </label>
+        </div>
+    </section>
     <!-- header section start -->
     <section class="header-section display-flex">
         <div class="header-div header-first-div" style="text-align: justify;">
