--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    <!-- buttom desin and search star -->
     <section class="display-flex button-div">
         <div class="btton-design display-flex">
             <img src="images/Healthy_Diet-removebg-preview.png" alt="">
@@ -26,10 +26,13 @@
         <div class="search-button">
             <input type="text" alt="search" style="padding: 7px 15px;">
             <label for="" style="font-weight: 700; color:  rgb(94, 4, 4);;">
-                Search Your Result
+                Search Result
             </label>
         </div>
     </section>
+    <!-- buttom desin and search star -->
+
+
     <!-- header section start -->
     <section class="header-section display-flex">
         <div class="header-div header-first-div" style="text-align: justify;">
