--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
     <footer class="footer-section">
         <h1><span class="text-heighlight">FOOD</span> NETWORK</h1>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        <div class="subscrive">
+            <p>The latest recipes, tips, features and reviews delivered regularly to your inbox.</p>
+            <input type="text" alt="email@email.com" value="email@email.com">
+            <label for="">
+                <h3>SUBCRIBE FOR FREE</h3>
+            </label>
+        </div>
     </footer>
     <!-- footer section end -->
 </body>
