--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Healthy Diet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Math&display=swap" rel="stylesheet">
@@ -82,27 +82,24 @@
     <section class="mid-image-section display-flex">
         <div class="mid-image-div">
             <img src="images/Project Cover.jpg" alt="">
-            <h1>Recipie Title</h1>
-            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi
-                lectus at.</p>
+            <h1>CREAMY PORK CHOPS</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">EIT Food announces once again its Journalism
+                Awards, aiming to encourage the work of journalists who bring awareness to the topic of innovation and
+                sustainability in....</p>
         </div>
         <div class="mid-image-div">
             <img src="images/Project Cover.png" alt="">
-            <h1>Recipie Title</h1>
-            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi
-                lectus at.</p>
+            <h1>BALSAMIC PORK CHOPS</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">EIT Food announces once again its Journalism
+                Awards, aiming to encourage the work of journalists who bring awareness to the topic of innovation and
+                sustainability in....</p>
         </div>
         <div class="mid-image-div">
             <img src="images/Project Cover1.jpg" alt="">
-            <h1>Recipie Title</h1>
-            <p style="text-align: justify; padding: 5px; margin: 10px;">Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Lacus,
-                fermentum amet faucibus sed id nisi
-                lectus at.</p>
+            <h1>PAN SEARED PORK</h1>
+            <p style="text-align: justify; padding: 5px; margin: 10px;">EIT Food announces once again its Journalism
+                Awards, aiming to encourage the work of journalists who bring awareness to the topic of innovation and
+                sustainability in....</p>
         </div>
     </section>
     <!-- Mid image section end -->
